src/configs/dev-api/deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: pioneers-dev-api
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      run: pioneers-dev-api
  template:
    metadata:
      labels:
        run: pioneers-dev-api
    spec:
      containers:
      - image: gcr.io/pioneers-roblox/devpionapi:latest
        imagePullPolicy: Always
        name: pioneers-dev-api
        ports:
        - containerPort: 443
        readinessProbe:
          httpGet:
            port: 443
            path: /
          initialDelaySeconds: 1
          periodSeconds: 2
          timeoutSeconds: 2
          successThreshold: 2
          failureThreshold: 2
